fix: trying to improve LCP

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://frontend-take-home.fetch.com" crossorigin />
+    <link rel="dns-prefetch" href="https://frontend-take-home.fetch.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>Dogs</title>
   </head>
